; ModuleID = '/home/carl/AnghaBench/linux/drivers/message/fusion/extr_mptsas.c_mptsas_set_starget.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/message/fusion/extr_mptsas.c_mptsas_set_starget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mptsas_phyinfo = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.scsi_target* }
%struct.scsi_target = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mptsas_phyinfo*, %struct.scsi_target*)* @mptsas_set_starget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mptsas_set_starget(%struct.mptsas_phyinfo* %0, %struct.scsi_target* %1) #0 {
  %3 = alloca %struct.mptsas_phyinfo*, align 8
  %4 = alloca %struct.scsi_target*, align 8
  store %struct.mptsas_phyinfo* %0, %struct.mptsas_phyinfo** %3, align 8
  store %struct.scsi_target* %1, %struct.scsi_target** %4, align 8
  %5 = load %struct.mptsas_phyinfo*, %struct.mptsas_phyinfo** %3, align 8
  %6 = getelementptr inbounds %struct.mptsas_phyinfo, %struct.mptsas_phyinfo* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = icmp ne %struct.TYPE_2__* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.scsi_target*, %struct.scsi_target** %4, align 8
  %11 = load %struct.mptsas_phyinfo*, %struct.mptsas_phyinfo** %3, align 8
  %12 = getelementptr inbounds %struct.mptsas_phyinfo, %struct.mptsas_phyinfo* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.scsi_target* %10, %struct.scsi_target** %14, align 8
  br label %15

15:                                               ; preds = %9, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
